...
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="no_account_click_to_reg">No Account? Click here to register</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_account">Already have an account? sign in</string>
    <string name="choose_instructor_text">choose instructor</string>
    <string name="no_instructors_available">No instructors available yet</string>
...
