<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/input_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="50dp"
        android:gravity="center">

        <EditText
            android:id="@+id/edit_text_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="15dp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="15dp"/>

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"/>
        <EditText
            android:id="@+id/edit_text_passwordCnf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="15dp"/>

        <EditText
            android:id="@+id/edit_text_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:visibility="invisible"
            android:padding="15dp"/>

        <EditText
            android:id="@+id/register_full_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"/>


        <fragment android:id="@+id/autocomplete_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            />


        <Spinner
            android:id="@+id/user_type_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="registerUser"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/sign_up"
            android:background="@drawable/large_button_drawable"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp"/>

        <Button
            android:id="@+id/already_got_account_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@drawable/large_button_drawable"
            android:fontFamily="sans-serif"
            android:onClick="showLoginScreen"
            android:padding="10dp"
            android:text="@string/already_have_account"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="13dp"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>